Fix: Prevent tab from being too big.

--- a/static/main.css
+++ b/static/main.css
@@ -295,5 +295,6 @@ table {
 }
 
 .tab-content {
-
+  max-width: 100%;
+  max-height: 100%;
 }
